--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "classnames": "2.3.2",
     "history": "5.3.0",
     "http-status-codes": "2.2.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "1.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -28,7 +28,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/faker": "5.5.9",
-    "@types/leaflet": "^1.9.3",
+    "@types/leaflet": "1.9.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-redux": "7.1.25",
@@ -43,7 +43,7 @@
     "eslint-plugin-react-refresh": "0.4.1",
     "faker": "5.5.3",
     "jsdom": "22.1.0",
-    "sass": "^1.69.3",
+    "sass": "1.69.3",
     "typescript": "5.0.4",
     "vite": "4.3.9",
     "vitest": "0.32.2"
