--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-refresh": "0.4.1",
     "faker": "5.5.3",
     "jsdom": "22.1.0",
+    "react-toastify": "9.1.3",
     "sass": "1.69.3",
     "typescript": "5.0.4",
     "vite": "4.3.9",
